# SALT

./: .env.example  .gitignore  README.md  TELEMETRY.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
agent/: pyproject.toml
agent/salt_agent/: __init__.py  discriminator.py  embeddings.py  generator.py  heuristics.py  library.py  server.py  training.py  types.py
agent/salt_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bridge/: Dockerfile  mqtt_kafka_bridge.py  requirements.txt
dashboard/: Dockerfile  app.py  requirements.txt
dashboard/templates/: index.html
docs/superpowers/plans/: 2026-03-14-salt-phase1.md  2026-03-14-salt-phase2.md
docs/superpowers/specs/: 2026-03-14-salt-design.md  2026-03-14-salt-phase2-design.md
healthcheck/: Dockerfile  agent.py  requirements.txt
postgres-sink/: Dockerfile  init.sql  requirements.txt  sink.py
sensors/: Dockerfile  fleet_simulator.py  humidity_sensor.py  temperature_sensor.py
tests/python/: test_discriminator.py  test_embeddings.py  test_generator.py  test_heuristics.py  test_library.py  test_server.py  test_training.py
tests/ts/: blackbox-adapter.test.ts  campaign-manager.test.ts  e2e.test.ts  format-json.test.ts  format-remediation.test.ts  format-replay.test.ts  format-sarif.test.ts  kill-chain.test.ts  session.test.ts  sidecar-client-phase2.test.ts  sidecar-client.test.ts  sidecar-manager.test.ts
tools/: inject.py  requirements.txt
