[project]
name = "salt-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "torch>=2.3.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["salt_agent*"]

[tool.pytest.ini_options]
testpaths = ["../tests/python"]
asyncio_mode = "auto"
